# tm-editor

./: .gitignore  .pylintrc  MANIFEST.in  Makefile  README.md  changelog  copyright  distpkg.py  macos.spec  macos_app.spec  mkdeb.sh  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
doc/sphinx/: AlgorithmFormatter.rst  Makefile  Readme.txt  conf.py  cuts.rst  index.rst  library.rst
resource/: tm-editor.desktop  tmEditor.rcc  tmeditor_rc.rcc
scripts/: tm-editor  tm-wizard
src/tmEditor/: tmeditor_rc.py
test/: test_cut_editor.py  test_menu.py
tests/: algorithm_editor.py  cut_editor.py  object_editor.py  scales.py  test_algorithm_editor.py  test_core_algorithm.py  test_core_algorithm_helper.py  test_core_formatter.py  test_cut_editor.py  test_menu.py  test_object_editor.py  test_scales.py
tmEditor/: AboutDialog.py  AlgorithmEditor.py  AlgorithmFormatter.py  AlgorithmSyntaxHighlighter.py  AlgorithmSyntaxValidator.py  BottomWidget.py  CodeEditor.py  CommonWidgets.py  CutEditor.py  Document.py  FunctionEditor.py  ImportDialog.py  MainWindow.py  MdiArea.py  Menu.py  Models.py  ObjectEditor.py  OpenUrlDialog.py  PreferencesDialog.py  Proxies.py  PyQt5Proxy.py  Settings.py  TempFileEnvironment.py  Toolbox.py  __init__.py  __main__.py  application.py  main.py  settings.json  tmeditor_rc.py  version.py
tmEditor/core/: Algorithm.py  AlgorithmFormatter.py  AlgorithmHelper.py  AlgorithmSyntaxValidator.py  Menu.py  Queue.py  RemoteVersionInfo.py  Settings.py  TableHelper.py  Toolbox.py  Types.py  XmlDecoder.py  XmlEncoder.py  formatter.py  html.py  toolbox.py  types.py
tmEditor/gui/: AboutDialog.py  BottomWidget.py  (+16 more)
(+38 files in other folders)
