[metadata]
name = tm-editor
version = attr: tmEditor.__version__
description = CMS Level-1 Trigger Menu Editor
long_description = file: README.md
long_description_content_type = text/markdown
author = Bernhard Arnold
author_email = bernhard.arnold@cern.ch
url = https://github.com/cms-l1-globaltrigger/tm-editor
license = GPLv3
classifiers =
    Framework :: PyQt5
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
packages = find:
install_requires =
#     tm-python @ git+https://github.com/cms-l1-globaltrigger/tm-python@0.11.2
    Markdown==3.1
    packaging==21.3
    PyQt5==5.14.*

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    tm-editor = tmEditor.__main__:main

[flake8]
ignore = E501

[mypy]

[mypy-tmGrammar.*]
ignore_missing_imports = true

[mypy-tmTable.*]
ignore_missing_imports = true
